tests/compile_fail/filters_unordered_type.stderr
error[E0277]: the trait bound `Product: MongoOrdered<std::string::String, std::string::String>` is not satisfied
  --> tests/compile_fail/filters_unordered_type.rs:15:13
   |
15 |     builder.gt::<product_fields::Name, _>("abc".to_string());
   |             ^^ unsatisfied trait bound
   |
help: the trait `MongoOrdered<std::string::String, std::string::String>` is not implemented for `Product`
  --> tests/compile_fail/filters_unordered_type.rs:8:1
   |
 8 | struct Product {
   | ^^^^^^^^^^^^^^
note: required by a bound in `FilterBuilder::<T>::gt`
  --> src/filters.rs
   |
   |     pub fn gt<F, V>(&mut self, value: V) -> &mut Self
   |            -- required by a bound in this associated function
...
   |         T: HasField<F> + MongoComparable<T::Value, V> + MongoOrdered<T::Value, V>,
   |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FilterBuilder::<T>::gt`
